--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -80,7 +80,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'kernelspec': {'display_name': 'Python 3 (ipykernel)',\n",
+       "  'language': 'python',\n",
+       "  'name': 'python3'},\n",
+       " 'language_info': {'codemirror_mode': {'name': 'ipython', 'version': 3},\n",
+       "  'file_extension': '.py',\n",
+       "  'mimetype': 'text/x-python',\n",
+       "  'name': 'python',\n",
+       "  'nbconvert_exporter': 'python',\n",
+       "  'pygments_lexer': 'ipython3',\n",
+       "  'version': '3.9.7'}}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "minimal_txt.metadata"
    ]
@@ -96,7 +116,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'cell_type': 'markdown',\n",
+       "  'metadata': {},\n",
+       "  'source': ['## A minimal notebook']},\n",
+       " {'cell_type': 'code',\n",
+       "  'execution_count': None,\n",
+       "  'metadata': {},\n",
+       "  'outputs': [],\n",
+       "  'source': ['# Do some arithmetic\\n', '1+1']},\n",
+       " {'cell_type': 'code',\n",
+       "  'execution_count': None,\n",
+       "  'metadata': {},\n",
+       "  'outputs': [],\n",
+       "  'source': []}]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "minimal_txt.cells"
    ]
@@ -168,7 +211,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```json\n",
+       "{ 'cell_type': 'code',\n",
+       "  'execution_count': None,\n",
+       "  'idx_': 1,\n",
+       "  'metadata': {},\n",
+       "  'outputs': [],\n",
+       "  'source': '# Do some arithmetic\\n1+1'}\n",
+       "```"
+      ],
+      "text/plain": [
+       "{'cell_type': 'code',\n",
+       " 'execution_count': None,\n",
+       " 'metadata': {},\n",
+       " 'outputs': (#0) [],\n",
+       " 'source': '# Do some arithmetic\\n1+1',\n",
+       " 'idx_': 1}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "minimal = dict2nb(minimal_txt)\n",
     "cell = minimal.cells[1]\n",
@@ -186,7 +255,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([<ast.Expr at 0x7ff748f36c70>], <ast.Add at 0x7ff748110af0>)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cell.parsed_(), cell.parsed_()[0].value.op"
    ]
@@ -216,7 +296,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'cell_type': 'markdown', 'metadata': {}, 'source': '## A minimal notebook', 'idx_': 0}\""
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "minimal = read_nb(minimal_fn)\n",
     "str(minimal.cells[0])"
@@ -233,7 +324,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../tests/minimal.ipynb'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "minimal.path_"
    ]
@@ -304,7 +406,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      " \"cells\": [\n",
+      "  {\n",
+      "   \"cell_type\": \"markdown\",\n"
+     ]
+    }
+   ],
    "source": [
     "print(nb2str(minimal)[:45])"
    ]
@@ -374,18 +487,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
   }
  },
  "nbformat": 4,
