clean nb & strip first

--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -169,7 +169,7 @@
     "        if '_parsed_' in self: del(self['_parsed_'])\n",
     "\n",
     "    def parsed_(self):\n",
-    "        if self.cell_type!='code' or self.source[:1].strip() in ['%', '!']: return\n",
+    "        if self.cell_type!='code' or self.source.strip()[:1] in ['%', '!']: return\n",
     "        if '_parsed_' not in self: \n",
     "            try: self._parsed_ = ast.parse(self.source).body\n",
     "            except SyntaxError: return # you can assign the result of ! to a variable in a notebook cell, which will result in a syntax error if parsed with the ast module.\n",
@@ -259,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x7ff748f36c70>], <ast.Add at 0x7ff748110af0>)"
+       "([<ast.Expr at 0x7fc359afcd30>], <ast.Add at 0x7fc358160b20>)"
       ]
      },
      "execution_count": null,
