--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -90,12 +90,6 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "_CODE_MATPLOTLIB_INLINE = \"\"\"\n",
-    "from IPython import get_ipython\n",
-    "try: get_ipython().run_line_magic('matplotlib', 'inline')\n",
-    "except ModuleNotFoundError: pass\n",
-    "\"\"\".strip()\n",
-    "\n",
     "class CaptureShell(FastInteractiveShell):\n",
     "    \"Execute the IPython/Jupyter source code\"\n",
     "    def __init__(self,\n",
@@ -104,7 +98,8 @@
     "        InteractiveShell._instance = self\n",
     "        self.out,self.count = [],1\n",
     "        self.exc = self.result = self._fname = self._cell_idx = None\n",
-    "        self.run_cell(_CODE_MATPLOTLIB_INLINE)\n",
+    "        try: self.enable_matplotlib('inline')\n",
+    "        except ModuleNotFoundError: pass\n",
     "        if path: self.set_path(path)\n",
     "        \n",
     "    def set_path(self, path):\n",
@@ -116,6 +111,12 @@
     "    def enable_gui(self, gui=None):\n",
     "        \"Disable GUI (over-ridden; called by IPython)\"\n",
     "        pass\n",
+    "    \n",
+    "    def enable_matplotlib(self, gui=None):\n",
+    "        \"Enable `matplotlib` in a nested shell\"\n",
+    "        from matplotlib_inline.backend_inline import configure_inline_support\n",
+    "        configure_inline_support.current_backend = 'unset'\n",
+    "        return super().enable_matplotlib(gui)\n",
     "    \n",
     "    def _showtraceback(self, etype, evalue, stb: str):\n",
     "        self.out.append(_out_exc(etype, evalue, stb))\n",
@@ -219,8 +220,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns',\n",
-       "   'Wall time: 2.62 us']}]"
+       "  'text': ['CPU times: user 3 us, sys: 1 us, total: 4 us',\n",
+       "   'Wall time: 6.2 us']}]"
       ]
      },
      "execution_count": null,
@@ -299,9 +300,9 @@
      "text": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)\n",
-      "\u001b[0;32m<ipython-input-1-01648acb07bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Oops\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOops\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\n",
       "\u001b[0;31mException\u001b[0m: Oops\n"
      ]
     }
@@ -513,7 +514,7 @@
        "  'output_type': 'error',\n",
        "  'traceback': ['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m',\n",
        "   '\\x1b[0;31mException\\x1b[0m                                 Traceback (most recent call last)',\n",
-       "   '\\x1b[0;32m<ipython-input-1-1c97c1d317ab>\\x1b[0m in \\x1b[0;36m<module>\\x1b[0;34m\\x1b[0m\\n\\x1b[0;32m----> 1\\x1b[0;31m \\x1b[0;32mraise\\x1b[0m \\x1b[0mException\\x1b[0m\\x1b[0;34m(\\x1b[0m\\x1b[0;34m\"Oopsie!\"\\x1b[0m\\x1b[0;34m)\\x1b[0m\\x1b[0;34m\\x1b[0m\\x1b[0;34m\\x1b[0m\\x1b[0m\\n\\x1b[0m',\n",
+       "   'Input \\x1b[0;32mIn [1]\\x1b[0m, in \\x1b[0;36m<cell line: 1>\\x1b[0;34m()\\x1b[0m\\n\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOopsie!\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
        "   '\\x1b[0;31mException\\x1b[0m: Oopsie!']}]"
       ]
      },
@@ -723,15 +724,15 @@
       "While Executing Cell #2:\n",
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)\n",
-      "\u001b[0;32m<ipython-input-1-b968a57a586e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[1;32m      1\u001b[0m \u001b[0;31m# some comments\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hello'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m----> 3\u001b[0;31m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "\u001b[0;32m~/github/execnb/tests/err.py\u001b[0m in \u001b[0;36mfoo\u001b[0;34m()\u001b[0m\n",
-      "\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0;36m13\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m98\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# some comments\u001b[39;00m\n",
+      "\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;32m----> 3\u001b[0m \u001b[43mfoo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\n",
+      "File \u001b[0;32m~/code/execnb/tests/err.py:2\u001b[0m, in \u001b[0;36mfoo\u001b[0;34m()\u001b[0m\n",
+      "\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfoo\u001b[39m():\n",
+      "\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;241m13\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m98\u001b[39m\n",
+      "\n",
       "\u001b[0;31mAssertionError\u001b[0m: \n",
       "\n"
      ]
@@ -743,6 +744,26 @@
     "    s.execute('../tests/error.ipynb', exc_stop=True)\n",
     "except:\n",
     "    print(s.prettytb())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tests -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matplotlib images are captured when outer shell uses inline backend\n",
+    "import matplotlib\n",
+    "matplotlib.use('module://matplotlib_inline.backend_inline')\n",
+    "res = CaptureShell().run('import matplotlib.pyplot as plt; plt.plot([0,1]);')\n",
+    "assert any('image/png' in o['data'] for o in res),'Image not captured'"
    ]
   },
   {
