--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -30,7 +30,9 @@
     "from fastcore.basics import *\n",
     "from fastcore.imports import *\n",
     "from fastcore.script import call_parse\n",
+    "from fastcore.test import *\n",
     "\n",
+    "import tokenize\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "from IPython.core.displayhook import DisplayHook\n",
     "from IPython.core.displaypub import DisplayPublisher\n",
@@ -54,8 +56,17 @@
     "\n",
     "class _CaptureHook(DisplayHook):\n",
     "    \"Called when displaying a result\"\n",
+    "\n",
+    "    def quiet(self):\n",
+    "        \"Should we silence because of ';'?\"\n",
+    "        sio = StringIO(self.shell._code)\n",
+    "        tokens = list(tokenize.generate_tokens(sio.readline))\n",
+    "        for t in reversed(tokens):\n",
+    "            if t.type in (tokenize.ENDMARKER, tokenize.NL, tokenize.NEWLINE, tokenize.COMMENT): continue\n",
+    "            return t.type == tokenize.OP and t.string == ';'\n",
+    "\n",
     "    def __call__(self, result=None):\n",
-    "        if result is None: return\n",
+    "        if result is None or self.quiet(): return\n",
     "        self.fill_exec_result(result)\n",
     "        self.shell._result(result)\n",
     "\n",
@@ -220,8 +231,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 3 us, sys: 1 us, total: 4 us',\n",
-       "   'Wall time: 6.2 us']}]"
+       "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
+       "   'Wall time: 5.01 us']}]"
       ]
      },
      "execution_count": null,
@@ -258,6 +269,33 @@
    ],
    "source": [
     "s.result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A trailing `;` stops the result from being captured:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.run(\"1+2;\")"
    ]
   },
   {
@@ -759,11 +797,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|hide\n",
     "# matplotlib images are captured when outer shell uses inline backend\n",
     "import matplotlib\n",
     "matplotlib.use('module://matplotlib_inline.backend_inline')\n",
     "res = CaptureShell().run('import matplotlib.pyplot as plt; plt.plot([0,1]);')\n",
     "assert any('image/png' in o['data'] for o in res),'Image not captured'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# Trailing `;` stops data from being captured\n",
+    "res = CaptureShell().run('1+1;')\n",
+    "test_eq(res, [])\n",
+    "\n",
+    "# Newlines, whitespace, and comments after the `;` are ignored\n",
+    "res = CaptureShell().run('1+1;\\n  #commented_func()')\n",
+    "test_eq(res, [])"
    ]
   },
   {
