--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -35,6 +35,7 @@
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "from IPython.core.displayhook import DisplayHook\n",
     "from IPython.core.displaypub import DisplayPublisher\n",
+    "from base64 import b64encode\n",
     "from io import StringIO\n",
     "\n",
     "from execnb.fastshell import FastInteractiveShell\n",
@@ -92,7 +93,23 @@
     "#|export\n",
     "# These are the standard notebook formats for exception and stream data (e.g stdout)\n",
     "def _out_exc(ename, evalue, traceback): return dict(ename=str(ename), evalue=str(evalue), output_type='error', traceback=traceback)\n",
-    "def _out_stream(text): return dict(name='stdout', output_type='stream', text=text.splitlines(False))"
+    "def _out_stream(text): return dict(name='stdout', output_type='stream', text=text.splitlines(True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "def _format_mimedata(k, v):\n",
+    "    \"Format mime-type keyed data consistently with Jupyter\"\n",
+    "    if k.startswith('text/'): return v.splitlines(True)\n",
+    "    if k.startswith('image/') and isinstance(v, bytes):\n",
+    "        v = b64encode(v).decode()\n",
+    "        return v+'\\n' if not v.endswith('\\n') else v\n",
+    "    return v"
    ]
   },
   {
@@ -141,11 +158,12 @@
     "        self.out.append(_out_exc(etype, evalue, stb))\n",
     "        self.exc = (etype, evalue, '\\n'.join(stb))\n",
     "\n",
-    "    def _add_out(self, data, meta, typ='execute_result', **kwargs): self.out.append(dict(data=data, metadata=meta, output_type=typ, **kwargs))\n",
+    "    def _add_out(self, data, meta, typ='execute_result', **kwargs):\n",
+    "        fd = {k:_format_mimedata(k,v) for k,v in data.items()}\n",
+    "        self.out.append(dict(data=fd, metadata=meta, output_type=typ, **kwargs))\n",
     "\n",
     "    def _add_exec(self, result, meta, typ='execute_result'):\n",
-    "        fd = {k:v.splitlines(True) for k,v in result.items()}\n",
-    "        self._add_out(fd, meta, execution_count=self.count)\n",
+    "        self._add_out(result, meta, execution_count=self.count)\n",
     "        self.count += 1\n",
     "\n",
     "    def _result(self, result):\n",
@@ -206,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]"
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]"
       ]
      },
      "execution_count": null,
@@ -239,8 +257,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 2 us, sys: 1 us, total: 3 us',\n",
-       "   'Wall time: 4.77 us']}]"
+       "  'text': ['CPU times: user 3 us, sys: 1 us, total: 4 us\\n',\n",
+       "   'Wall time: 7.87 us\\n']}]"
       ]
      },
      "execution_count": null,
@@ -428,7 +446,7 @@
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
        "  'execution_count': 2},\n",
-       " {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]"
+       " {'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]"
       ]
      },
      "execution_count": null,
@@ -654,7 +672,7 @@
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
        "  'execution_count': 10},\n",
-       " {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]"
+       " {'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]"
       ]
      },
      "execution_count": null,
@@ -717,7 +735,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'data': {'text/plain': ['2']}, 'execution_count': 2, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]\n"
+      "[{'data': {'text/plain': ['2']}, 'execution_count': 2, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]\n"
      ]
     }
    ],
@@ -830,6 +848,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# Streams are split on and keep newlines\n",
+    "res = CaptureShell().run(r\"print('a\\nb'); print('c\\n\\n'); print('d')\")\n",
+    "test_eq(res[0]['text'], ['a\\n', 'b\\n', 'c\\n', '\\n', '\\n', 'd\\n'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# Text mime data are split on and keep newlines\n",
+    "res = CaptureShell().run(r\"from IPython.display import Markdown; display(Markdown('a\\nb'))\")\n",
+    "test_eq(res[0]['data']['text/markdown'], ['a\\n', 'b'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# Binary image mime data are base64-encoded and end in a single `\\n`\n",
+    "from PIL import Image\n",
+    "\n",
+    "def _pil2b64(im): return b64encode(im._repr_png_()).decode()+'\\n'\n",
+    "im = Image.new('RGB', (3,3), 'red')\n",
+    "imb64 = _pil2b64(im)\n",
+    "\n",
+    "res = CaptureShell().run(\"from PIL import Image; Image.new('RGB', (3,3), 'red')\")\n",
+    "test_eq(res[0]['data']['image/png'], imb64)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -888,7 +948,7 @@
        "  'execution_count': None,\n",
        "  'id': 'ea528db5',\n",
        "  'metadata': {},\n",
-       "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2']}],\n",
+       "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2\\n']}],\n",
        "  'source': 'print(a)',\n",
        "  'idx_': 1}]"
       ]
