--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -30,7 +30,6 @@
     "from fastcore.basics import *\n",
     "from fastcore.imports import *\n",
     "from fastcore.script import call_parse\n",
-    "from fastcore.test import *\n",
     "\n",
     "import tokenize\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -42,6 +41,15 @@
     "from execnb.nbio import *\n",
     "\n",
     "from collections.abc import Callable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastcore.test import *"
    ]
   },
   {
@@ -231,8 +239,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
-       "   'Wall time: 5.01 us']}]"
+       "  'text': ['CPU times: user 2 us, sys: 1 us, total: 3 us',\n",
+       "   'Wall time: 4.77 us']}]"
       ]
      },
      "execution_count": null,
@@ -816,7 +824,7 @@
     "res = CaptureShell().run('1+1;')\n",
     "test_eq(res, [])\n",
     "\n",
-    "# Newlines, whitespace, and comments after the `;` are ignored\n",
+    "# Newlines, whitespace, and comments after `;` are ignored\n",
     "res = CaptureShell().run('1+1;\\n  #commented_func()')\n",
     "test_eq(res, [])"
    ]
