--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -93,7 +93,7 @@
     "#|export\n",
     "# These are the standard notebook formats for exception and stream data (e.g stdout)\n",
     "def _out_exc(ename, evalue, traceback): return dict(ename=str(ename), evalue=str(evalue), output_type='error', traceback=traceback)\n",
-    "def _out_stream(text): return dict(name='stdout', output_type='stream', text=text.splitlines(True))"
+    "def _out_stream(text, name): return dict(name=name, output_type='stream', text=text.splitlines(True))"
    ]
   },
   {
@@ -129,11 +129,11 @@
     "class CaptureShell(FastInteractiveShell):\n",
     "    \"Execute the IPython/Jupyter source code\"\n",
     "    def __init__(self,\n",
-    "                path:str|Path=None): # Add `path` to python path\n",
+    "                 path:str|Path=None): # Add `path` to python path\n",
     "        super().__init__(displayhook_class=_CaptureHook, display_pub_class=_CapturePub)\n",
     "        InteractiveShell._instance = self\n",
     "        self.out,self.count = [],1\n",
-    "        self.exc = self.result = self._fname = self._cell_idx = None\n",
+    "        self.exc = self.result = self._fname = self._cell_idx = self._stdout = self._stderr = None\n",
     "        try: self.enable_matplotlib('inline')\n",
     "        except ModuleNotFoundError: pass\n",
     "        if path: self.set_path(path)\n",
@@ -159,6 +159,7 @@
     "        self.exc = (etype, evalue, '\\n'.join(stb))\n",
     "\n",
     "    def _add_out(self, data, meta, typ='execute_result', **kwargs):\n",
+    "        self._stream()\n",
     "        fd = {k:_format_mimedata(k,v) for k,v in data.items()}\n",
     "        self.out.append(dict(data=fd, metadata=meta, output_type=typ, **kwargs))\n",
     "\n",
@@ -170,9 +171,15 @@
     "        self.result = result\n",
     "        self._add_exec(*self.display_formatter.format(result))\n",
     "\n",
-    "    def _stream(self, std):\n",
-    "        text = std.getvalue()\n",
-    "        if text: self.out.append(_out_stream(text))"
+    "    def _stream(self):\n",
+    "        for nm in ('stdout','stderr'):\n",
+    "            attr = '_'+nm\n",
+    "            std = getattr(self, attr)\n",
+    "            if std is not None:\n",
+    "                text = std.getvalue()\n",
+    "                if text:\n",
+    "                    self.out.append(_out_stream(text, nm))\n",
+    "                    setattr(self, attr, StringIO())"
    ]
   },
   {
@@ -207,12 +214,12 @@
     "    self._code = code\n",
     "    self.exc = False\n",
     "    self.out.clear()\n",
-    "    self.sys_stdout,self.sys_stderr = sys.stdout,sys.stderr\n",
-    "    if stdout: stdout = sys.stdout = StringIO()\n",
-    "    if stderr: stderr = sys.stderr = StringIO()\n",
+    "    sys_stdout,sys_stderr = sys.stdout,sys.stderr\n",
+    "    if stdout: self._stdout = sys.stdout = StringIO()\n",
+    "    if stderr: self._stderr = sys.stderr = StringIO()\n",
     "    try: self.run_cell(code)\n",
-    "    finally: sys.stdout,sys.stderr = self.sys_stdout,self.sys_stderr\n",
-    "    self._stream(stdout)\n",
+    "    finally: sys.stdout,sys.stderr = sys_stdout,sys_stderr\n",
+    "    self._stream()\n",
     "    return [*self.out]"
    ]
   },
@@ -251,14 +258,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'data': {'text/plain': ['2']},\n",
+       "[{'name': 'stdout',\n",
+       "  'output_type': 'stream',\n",
+       "  'text': ['CPU times: user 2 us, sys: 1e+03 ns, total: 3 us\\n',\n",
+       "   'Wall time: 5.01 us\\n']},\n",
+       " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
-       "  'execution_count': 1},\n",
-       " {'name': 'stdout',\n",
-       "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 3 us, sys: 1 us, total: 4 us\\n',\n",
-       "   'Wall time: 7.87 us\\n']}]"
+       "  'execution_count': 1}]"
       ]
      },
      "execution_count": null,
@@ -442,11 +449,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'data': {'text/plain': ['2']},\n",
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
+       " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
-       "  'execution_count': 2},\n",
-       " {'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]"
+       "  'execution_count': 2}]"
       ]
      },
      "execution_count": null,
@@ -668,11 +675,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'data': {'text/plain': ['2']},\n",
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
+       " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
-       "  'execution_count': 10},\n",
-       " {'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]"
+       "  'execution_count': 10}]"
       ]
      },
      "execution_count": null,
@@ -735,7 +742,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'data': {'text/plain': ['2']}, 'execution_count': 2, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]\n"
+      "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}, {'data': {'text/plain': ['2']}, 'execution_count': 2, 'metadata': {}, 'output_type': 'execute_result'}]\n"
      ]
     }
    ],
@@ -887,6 +894,60 @@
     "\n",
     "res = CaptureShell().run(\"from PIL import Image; Image.new('RGB', (3,3), 'red')\")\n",
     "test_eq(res[0]['data']['image/png'], imb64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# `display_data` flushes stdout and stderr - in that order\n",
+    "res = CaptureShell().run(\"import sys; sys.stderr.write('Error!'); print(1); display(1)\")\n",
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']},\n",
+    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data'}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# Consecutive writes to stdout are grouped\n",
+    "res = CaptureShell().run('print(1); print(2); print(3)')\n",
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n']}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# Consecutive writes to stdout are grouped despite an intermediate write to stderr, which is captured after\n",
+    "res = CaptureShell().run(\"import sys; print(1); print(2); sys.stderr.write('Error!'); print(3)\")\n",
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n']},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "# `execute_result` is always last\n",
+    "res = CaptureShell().run(\"import sys; sys.stderr.write('Error!'); print(1); display(1); 1\")\n",
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']},\n",
+    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data'},\n",
+    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'execute_result', 'execution_count': 1}])"
    ]
   },
   {
