--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -210,7 +210,7 @@
     "        code:str, # Python/IPython code to run\n",
     "        stdout=True, # Capture stdout and save as output?\n",
     "        stderr=True): # Capture stderr and save as output?\n",
-    "    \"runs `code`, returning a list of all outputs in Jupyter notebook format\"\n",
+    "    \"Run `code`, returning a list of all outputs in Jupyter notebook format\"\n",
     "    self._code = code\n",
     "    self.exc = False\n",
     "    self.out.clear()\n",
@@ -260,8 +260,8 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 2 us, sys: 1e+03 ns, total: 3 us\\n',\n",
-       "   'Wall time: 5.01 us\\n']},\n",
+       "  'text': ['CPU times: user 4 us, sys: 1 us, total: 5 us\\n',\n",
+       "   'Wall time: 7.87 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
@@ -730,7 +730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a shortcut for the combination of `read_nb`, `run_all`, and `write_nb`."
+    "This is a shortcut for the combination of `read_nb`, `CaptureShell.run_all`, and `write_nb`."
    ]
   },
   {
@@ -1029,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This can be used with `CaptureStream.execute` to parameterise runs of models in notebooks. Place any defaults for configuration code needed in the first cell, and then when running `execute` pass in new parameters as needed in `inject_code`. To replace only some of the defaults, leave an empty cell as the second cell, and inject code using `inject_idx=1` to replace the empty second cell with code that overrides some of the defaults set in the first cell. When using `execute` you can pass `inject_path` instead of `inject_code` to read the injected code from a file."
+    "This can be used with `CaptureShell.execute` to parameterise runs of models in notebooks. Place any defaults for configuration code needed in the first cell, and then when running `execute` pass in new parameters as needed in `inject_code`. To replace only some of the defaults, leave an empty cell as the second cell, and inject code using `inject_idx=1` to replace the empty second cell with code that overrides some of the defaults set in the first cell. When using `execute` you can pass `inject_path` instead of `inject_code` to read the injected code from a file."
    ]
   },
   {
@@ -1055,7 +1055,7 @@
     "    inject_path:str=None, # Path to file containing code to inject into a cell\n",
     "    inject_idx:int=0 # Cell to replace with `inject_code`\n",
     "):\n",
-    "    \"Execute notebook from `src` and save with outputs to `dest\"\n",
+    "    \"Execute notebook from `src` and save with outputs to `dest`\"\n",
     "    CaptureShell().execute(src, dest, exc_stop=exc_stop, inject_code=inject_code,\n",
     "                           inject_path=inject_path, inject_idx=inject_idx)"
    ]
