--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#|hide\n",
-    "from execnb.nbio import *\n",
-    "from execnb.shell import *\n",
-    "from fastcore.utils import *"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,6 +56,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from execnb.nbio import *\n",
+    "from execnb.shell import *\n",
+    "from fastcore.utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -92,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To execute a notebook and save it with outputs filled in, use `execute`:"
+    "To execute a notebook and save it with outputs filled in, use `CaptureShell.execute`:"
    ]
   },
   {
@@ -104,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'data': {'text/plain': ['2']}, 'execution_count': 6, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]\n"
+      "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}, {'data': {'text/plain': ['2']}, 'execution_count': 3, 'metadata': {}, 'output_type': 'execute_result'}]\n"
      ]
     }
    ],
@@ -113,6 +112,45 @@
     "    s.execute('../tests/clean.ipynb', 'tmp.ipynb')\n",
     "    print(read_nb('tmp.ipynb').cells[1].outputs)\n",
     "finally: Path('tmp.ipynb').unlink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also execute notebooks from the command line with `exec_nb`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: exec_nb [-h] [--dest DEST] [--exc_stop] [--inject_code INJECT_CODE]\r\n",
+      "               [--inject_path INJECT_PATH] [--inject_idx INJECT_IDX]\r\n",
+      "               src\r\n",
+      "\r\n",
+      "Execute notebook from `src` and save with outputs to `dest`\r\n",
+      "\r\n",
+      "positional arguments:\r\n",
+      "  src                        Notebook path to read from\r\n",
+      "\r\n",
+      "optional arguments:\r\n",
+      "  -h, --help                 show this help message and exit\r\n",
+      "  --dest DEST                Notebook path to write to (default: )\r\n",
+      "  --exc_stop                 Stop on exceptions? (default: False)\r\n",
+      "  --inject_code INJECT_CODE  Code to inject into a cell\r\n",
+      "  --inject_path INJECT_PATH  Path to file containing code to inject into a cell\r\n",
+      "  --inject_idx INJECT_IDX    Cell to replace with `inject_code` (default: 0)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!exec_nb --help"
    ]
   }
  ],
