--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -86,14 +86,7 @@
       "text/plain": [
        "{'kernelspec': {'display_name': 'Python 3 (ipykernel)',\n",
        "  'language': 'python',\n",
-       "  'name': 'python3'},\n",
-       " 'language_info': {'codemirror_mode': {'name': 'ipython', 'version': 3},\n",
-       "  'file_extension': '.py',\n",
-       "  'mimetype': 'text/x-python',\n",
-       "  'name': 'python',\n",
-       "  'nbconvert_exporter': 'python',\n",
-       "  'pygments_lexer': 'ipython3',\n",
-       "  'version': '3.9.7'}}"
+       "  'name': 'python3'}}"
       ]
      },
      "execution_count": null,
@@ -126,13 +119,11 @@
        " {'cell_type': 'code',\n",
        "  'execution_count': None,\n",
        "  'metadata': {},\n",
-       "  'outputs': [],\n",
-       "  'source': ['# Do some arithmetic\\n', '1+1']},\n",
-       " {'cell_type': 'code',\n",
-       "  'execution_count': None,\n",
-       "  'metadata': {},\n",
-       "  'outputs': [],\n",
-       "  'source': []}]"
+       "  'outputs': [{'data': {'text/plain': ['2']},\n",
+       "    'execution_count': None,\n",
+       "    'metadata': {},\n",
+       "    'output_type': 'execute_result'}],\n",
+       "  'source': ['# Do some arithmetic\\n', '1+1']}]"
       ]
      },
      "execution_count": null,
@@ -220,7 +211,7 @@
        "  'execution_count': None,\n",
        "  'idx_': 1,\n",
        "  'metadata': {},\n",
-       "  'outputs': [],\n",
+       "  'outputs': [{'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}],\n",
        "  'source': '# Do some arithmetic\\n1+1'}\n",
        "```"
       ],
@@ -228,7 +219,7 @@
        "{'cell_type': 'code',\n",
        " 'execution_count': None,\n",
        " 'metadata': {},\n",
-       " 'outputs': (#0) [],\n",
+       " 'outputs': (#1) [{'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}],\n",
        " 'source': '# Do some arithmetic\\n1+1',\n",
        " 'idx_': 1}"
       ]
@@ -259,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x7fc359afcd30>], <ast.Add at 0x7fc358160b20>)"
+       "([<ast.Expr at 0x104ccc400>], <ast.Add at 0x1023b0220>)"
       ]
      },
      "execution_count": null,
