--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -31,7 +31,7 @@
     "from fastcore.basics import *\n",
     "from fastcore.xtras import *\n",
     "\n",
-    "import ast,functools,json\n",
+    "import ast,functools\n",
     "from pprint import pformat,pprint"
    ]
   },
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x104ccc400>], <ast.Add at 0x1023b0220>)"
+       "([<ast.Expr at 0x10f5174c0>], <ast.Add at 0x10ccc8340>)"
       ]
      },
      "execution_count": null,
@@ -383,7 +383,7 @@
     "def nb2str(nb):\n",
     "    \"Convert `nb` to a `str`\"\n",
     "    if isinstance(nb, (AttrDict,L)): nb = nb2dict(nb)\n",
-    "    return json.dumps(nb, sort_keys=True, indent=1, ensure_ascii=False) + \"\\n\""
+    "    return dumps(nb, sort_keys=True, indent=1, ensure_ascii=False) + \"\\n\""
    ]
   },
   {
