--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -461,8 +461,8 @@
    "source": [
     "#|hide\n",
     "#|eval: false\n",
-    "from nbprocess.doclinks import nbprocess_export\n",
-    "nbprocess_export()"
+    "from nbdev.doclinks import nbdev_export\n",
+    "nbdev_export()"
    ]
   },
   {
