--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -1082,8 +1082,8 @@
    "source": [
     "#|hide\n",
     "#|eval: false\n",
-    "from nbprocess.doclinks import nbprocess_export\n",
-    "nbprocess_export()"
+    "from nbdev.doclinks import nbdev_export\n",
+    "nbdev_export()"
    ]
   },
   {
