--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x10f5174c0>], <ast.Add at 0x10ccc8340>)"
+       "([<ast.Expr at 0x107d476a0>], <ast.Add at 0x105235ee0>)"
       ]
      },
      "execution_count": null,
@@ -271,7 +271,7 @@
     "#|export\n",
     "def read_nb(path):\n",
     "    \"Return notebook at `path`\"\n",
-    "    res = dict2nb(Path(path).read_json())\n",
+    "    res = dict2nb(Path(path).read_json(encoding='utf-8'))\n",
     "    res['path_'] = str(path)\n",
     "    return res"
    ]
