--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -450,6 +450,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Creating a notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "def new_nb():\n",
+    "    \"Returns an empty new notebook\"\n",
+    "    return dict2nb({'cells':[],'metadata':{},'nbformat':4,'nbformat_minor':5})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use this function when creating a new notebook. Useful for when you don't want to create a notebook on disk first and then read it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## export -"
    ]
   },
