--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -184,9 +184,9 @@
    "outputs": [],
    "source": [
     "#|export\n",
-    "def dict2nb(js):\n",
+    "def dict2nb(js=None, **kwargs):\n",
     "    \"Convert dict `js` to an `AttrDict`, \"\n",
-    "    nb = dict2obj(js)\n",
+    "    nb = dict2obj(js or kwargs)\n",
     "    nb.cells = nb.cells.enumerate().starmap(NbCell)\n",
     "    return nb"
    ]
@@ -250,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x107d476a0>], <ast.Add at 0x105235ee0>)"
+       "([<ast.Expr at 0x1067c36a0>], <ast.Add at 0x1039bb2e0>)"
       ]
      },
      "execution_count": null,
@@ -335,6 +335,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Creating a notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "def new_nb(cells=None, meta=None, nbformat=4, nbformat_minor=5):\n",
+    "    \"Returns an empty new notebook\"\n",
+    "    return dict2nb(cells=cells or [],metadata=meta or {},nbformat=nbformat,nbformat_minor=nbformat_minor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use this function when creating a new notebook. Useful for when you don't want to create a notebook on disk first and then read it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def mk_cell(text,  # `source` attr in cell\n",
+    "            cell_type='code',  # `cell_type` attr in cell\n",
+    "            **kwargs):  # any other attrs to add to cell\n",
+    "    \"Create an `NbCell` containing `text`\"\n",
+    "    assert cell_type in {'code', 'markdown', 'raw'}\n",
+    "    if 'metadata' not in kwargs: kwargs['metadata']={}\n",
+    "    return NbCell(0, dict(cell_type=cell_type, source=text, directives_={}, **kwargs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```json\n",
+       "{ 'cell_type': 'code',\n",
+       "  'directives_': {},\n",
+       "  'execution_count': 0,\n",
+       "  'idx_': 0,\n",
+       "  'metadata': {},\n",
+       "  'source': 'print(1)'}\n",
+       "```"
+      ],
+      "text/plain": [
+       "{'cell_type': 'code',\n",
+       " 'source': 'print(1)',\n",
+       " 'directives_': {},\n",
+       " 'execution_count': 0,\n",
+       " 'metadata': {},\n",
+       " 'idx_': 0}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mk_cell('print(1)', execution_count=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Writing a notebook"
    ]
   },
@@ -347,7 +424,7 @@
     "#|export\n",
     "def nb2dict(d, k=None):\n",
     "    \"Convert parsed notebook to `dict`\"\n",
-    "    if k in ('source',): return d.splitlines(keepends=True)\n",
+    "    if k=='source': return d.splitlines(keepends=True)\n",
     "    if isinstance(d, (L,list)): return list(L(d).map(nb2dict))\n",
     "    if not isinstance(d, dict): return d\n",
     "    return dict(**{k:nb2dict(v,k) for k,v in d.items() if k[-1] != '_'})"
@@ -450,26 +527,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a notebook"
+    "Here's how to put all the pieces of `execnb.nbio` together:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'cell_type': 'code', 'metadata': {}, 'source': 'print(1)', 'idx_': 0}]\n"
+     ]
+    }
+   ],
    "source": [
-    "#|export\n",
-    "def new_nb():\n",
-    "    \"Returns an empty new notebook\"\n",
-    "    return dict2nb({'cells':[],'metadata':{},'nbformat':4,'nbformat_minor':5})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use this function when creating a new notebook. Useful for when you don't want to create a notebook on disk first and then read it."
+    "nb = new_nb([mk_cell('print(1)')])\n",
+    "path = Path('test.ipynb')\n",
+    "write_nb(nb, path)\n",
+    "nb2 = read_nb(path)\n",
+    "print(nb2.cells)\n",
+    "path.unlink()"
    ]
   },
   {
@@ -486,8 +566,7 @@
    "outputs": [],
    "source": [
     "#|hide\n",
-    "#|eval: false\n",
-    "from nbdev.doclinks import nbdev_export\n",
+    "from nbdev import nbdev_export\n",
     "nbdev_export()"
    ]
   },
